# clipper

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.backup  GEMINI.md  PRIVACY.md  PRIVACY.zh-CN.md  README.md  README.zh-CN.md  codebook.toml  package-lock.json  package.json
.github/workflows/: release-binary.yml  release-docker.yml  release.yml
clipper/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
clipper-cli/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
clipper-cli/scripts/: README.md  clipper-fish-autosuggestions.fish  clipper-fzf.sh  clipper-zsh-autosuggestions.zsh  generate-completions.sh
clipper-cli/src/: config.rs  main.rs
clipper-client/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
clipper-client/src/: certificate.rs  client.rs  error.rs  lib.rs  models.rs
clipper-client/tests/: integration_tests.rs
clipper-indexer/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
clipper-indexer/examples/: basic_usage.rs
clipper-indexer/src/: error.rs  export.rs  indexer.rs  lib.rs  models.rs  storage.rs  storage_config.rs
clipper-indexer/tests/: integration_tests.rs
clipper-security/: AGENTS.md  Cargo.toml
clipper-security/src/: lib.rs
clipper-server/: AGENTS.md  CLAUDE.md  Cargo.toml  README.docker-hub.md  README.md  README.zh-CN.md  build.rs  config.toml.example
clipper-server/src/: acme.rs  api.rs  auth.rs  cert_storage.rs  cleanup.rs  config.rs  error.rs  lib.rs  main.rs  parent_monitor.rs  state.rs  tls.rs  websocket.rs
clipper-server/src/assets/: shared_clip.css  shared_clip.js
clipper-server/src/templates/: shared_clip.html
clipper-server/tests/: api_tests.rs
clipper-server/web/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
clipper-server/web/src/: App.css  App.tsx  main.tsx  types.ts
clipper-server/web/src/api/: client.ts
clipper-server/web/src/components/: ClipEntry.tsx  ClipList.tsx  EditClipDialog.tsx  FavoriteToggle.tsx  LoginScreen.css  LoginScreen.tsx  SearchBox.tsx  SettingsDialog.tsx  Toast.tsx
clipper-server/web/src/hooks/: useCleanupConfig.ts  useClips.ts  useServerConfig.ts  useTheme.ts  useWebSocket.ts
clipper-server/web/src/i18n/: I18nProvider.tsx  index.ts
clipper-server/web/src/i18n/translations/: en.ts  zh.ts
clipper-slint/: AGENTS.md  CLAUDE.md  Cargo.toml
clipper-slint/src/: main.rs  server.rs  settings.rs
clipper-slint/ui/: app.slint
clipper/scripts/: build-server.js  build-server.sh
clipper/src/: App.css  App.tsx  main.rs  main.tsx  types.ts
clipper/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
clipper/src-tauri/binaries/: .gitignore
clipper/src-tauri/capabilities/: default.json
clipper/src-tauri/icons/: icon.icns
clipper/src-tauri/src/: autolaunch.rs  clipboard.rs  commands.rs  gtk_headerbar.rs  lib.rs  migration.rs  server.rs  settings.rs  state.rs  tray.rs  tray_i18n.rs  websocket.rs
clipper/src/api/: tauriClient.ts
clipper/src/components/: CertificateConfirmDialog.css  CertificateConfirmDialog.tsx  CertificateMismatchDialog.css  CertificateMismatchDialog.tsx  CleanupConfigWrapper.tsx  ClipEntry.tsx  ClipList.tsx  DateFilter.tsx  DropZone.tsx  EditClipDialog.tsx  FavoriteToggle.tsx  SearchBox.tsx  ServerConfigWrapper.tsx  SettingsDialog.tsx  TauriToastWrapper.tsx  TitleBar.tsx  Toast.tsx
clipper/src/hooks/: useCleanupConfig.ts  useClips.ts  useEnsureWindowSize.ts  useFileUpload.ts  useServerConfig.ts  useTheme.ts
clipper/src/i18n/: I18nProvider.tsx  index.ts  translations.ts
clipper/src/i18n/translations/: en.ts  zh.ts
clipper/ui/: app.slint
cloud-services/: README.md  README.zh-CN.md  azure-container-instance.yaml  azuredeploy.json  azuredeploy.parameters.json
cloud-services/aca/: README.zh-CN.md  azuredeploy.json  azuredeploy.parameters.json
cloud-services/aci/: README.md  README.zh-CN.md  azuredeploy.json  azuredeploy.parameters.json
docker/: entrypoint.sh
docs/: CNAME  index.html
