[workspace]
members = [
    "clipper-slint",
    "clipper-server",
    "clipper-indexer",
    "clipper-client",
    "clipper-cli",
    "clipper/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.16.0"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/windoze/clipper"
authors = ["Chen Xu <windoze@0d0a.com>"]

[patch.crates-io]
cmake = { git = "https://github.com/windoze/cmake-rs", branch = "master" }
