[workspace]
members = [
    "clipper-security",
    "clipper-slint",
    "clipper-server",
    "clipper-indexer",
    "clipper-client",
    "clipper-cli",
    "clipper/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.24.1"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/windoze/clipper"
authors = ["Chen Xu <windoze@0d0a.com>"]
