[package]
name = "clipper-cli"
version = "0.6.0"
edition = "2021"

[dependencies]
clipper-client = { path = "../clipper-client" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
