[package]
name = "clipper-cli"
rust-version = "1.91"
version.workspace = true
edition.workspace = true

[dependencies]
clipper-client = { path = "../clipper-client" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
url = "2"
