[package]
name = "clipper-client"
version = "0.7.1"
edition = "2021"

[features]
default = []
# Allow connecting to servers with invalid/self-signed certificates (for development)
danger-accept-invalid-certs = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
webpki-roots = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
