[package]
name = "clipper_indexer"
rust-version = "1.91"
version.workspace = true
edition.workspace = true

[features]
default = []
# AWS S3 storage backend support
aws = ["object_store/aws"]
# Azure Blob Storage backend support (includes Managed Identity / Workload Identity)
azure = ["object_store/azure"]
# Enable all cloud storage backends
cloud = ["aws", "azure"]

[dependencies]
surrealdb = { version = "2.3", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object_store = { version = "0.12", features = ["http"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
jieba-rs = "0.8"
once_cell = "1"
rand = "0.9"
url = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
