[package]
name = "clipper_indexer"
rust-version = "1.91"
version.workspace = true
edition.workspace = true

[dependencies]
surrealdb = { version = "2.3", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object_store = { version = "0.12", features = ["http"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
jieba-rs = "0.8"
once_cell = "1"
rand = "0.9"
tar = "0.4"
flate2 = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-tar = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
