[package]
name = "clipper-slint"
version.workspace = true
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1"
chrono = "0.4"
clipper-client = { path = "../clipper-client" }
dirs = "6"
local-ip-address = "0.6"
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.14.1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "compat-1-2",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "process",
    "fs",
    "time",
    "io-util",
] }
tracing = "0.1"
which = "8"

[build-dependencies]
slint-build = "1.14.1"
