[package]
name = "clipper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clipper-client = { path = "../clipper-client" }
slint = { version = "1.14.1", default-features = false, features = ["std", "backend-winit", "renderer-skia", "compat-1-2"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
slint-build = "1.14.1"
