[package]
name = "clipper"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://clipper.unwritten.codes"
description = "Clipper - Clipboard Manager"

[lib]
name = "clipper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-prevent-default = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "process",
    "io-util",
] }
clipper-client = { path = "../../clipper-client" }
chrono = { version = "0.4", features = ["serde"] }
arboard = { version = "3", features = ["image-data"] }
image = "0.25"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
portpicker = "0.1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
local-ip-address = "0.6"
gethostname = "1"

# Cross-platform pipe support for server process monitoring
os_pipe = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
